New plane submodule added: dash

--- a/.gitmodules
+++ b/.gitmodules
@@ -1414,3 +1414,6 @@
 [submodule "Aircraft/Zlin-50lx"]
 	path = Aircraft/Zlin-50lx
 	url = git@github.com:FGMEMBERS/Zlin-50lx.git
+[submodule "Aircraft/dash"]
+	path = Aircraft/dash
+	url = git@github.com:FGMEMBERS/dash.git
