Aircraft from Prestes Hangar GPL2orlater Submodules added

--- a/.gitmodules
+++ b/.gitmodules
@@ -1417,3 +1417,33 @@
 [submodule "Aircraft/dash"]
 	path = Aircraft/dash
 	url = https://github.com/FGMEMBERS/dash.git
+[submodule "Aircraft/A319"]
+	path = Aircraft/A319
+	url = https://github.com/FGMEMBERS/A319.git
+[submodule "Aircraft/A330-300"]
+	path = Aircraft/A330-300
+	url = https://github.com/FGMEMBERS/A330-300.git
+[submodule "Aircraft/Embraer-195"]
+	path = Aircraft/Embraer-195
+	url = https://github.com/FGMEMBERS/Embraer-195.git
+[submodule "Aircraft/EMB-120"]
+	path = Aircraft/EMB-120
+	url = https://github.com/FGMEMBERS/EMB-120.git
+[submodule "Aircraft/KC-390"]
+	path = Aircraft/KC-390
+	url = https://github.com/FGMEMBERS/KC-390.git
+[submodule "Aircraft/fwta183"]
+	path = Aircraft/fwta183
+	url = https://github.com/FGMEMBERS/fwta183.git
+[submodule "Aircraft/Go9"]
+	path = Aircraft/Go9
+	url = https://github.com/FGMEMBERS/Go9.git
+[submodule "Aircraft/MD-12"]
+	path = Aircraft/MD-12
+	url = https://github.com/FGMEMBERS/MD-12.git
+[submodule "Aircraft/YF-17"]
+	path = Aircraft/YF-17
+	url = https://github.com/FGMEMBERS/YF-17.git
+[submodule "Aircraft/Kombi"]
+	path = Aircraft/Kombi
+	url = https://github.com/FGMEMBERS/Kombi.git
