Omega Hangar GPL2orlater Aircraft submodules added

--- a/.gitmodules
+++ b/.gitmodules
@@ -1447,3 +1447,12 @@
 [submodule "Aircraft/Kombi"]
 	path = Aircraft/Kombi
 	url = https://github.com/FGMEMBERS/Kombi.git
+[submodule "Aircraft/ATR72"]
+	path = Aircraft/ATR72
+	url = https://github.com/FGMEMBERS/ATR72.git
+[submodule "Aircraft/ATR-42-500"]
+	path = Aircraft/ATR-42-500
+	url = https://github.com/FGMEMBERS/ATR-42-500.git
+[submodule "Aircraft/E-jet-family"]
+	path = Aircraft/E-jet-family
+	url = https://github.com/FGMEMBERS/E-jet-family.git
