Hot Air Ballon submodule initialized

--- a/.gitmodules
+++ b/.gitmodules
@@ -1456,3 +1456,6 @@
 [submodule "Aircraft/E-jet-family"]
 	path = Aircraft/E-jet-family
 	url = https://github.com/FGMEMBERS/E-jet-family.git
+[submodule "Aircraft/Hot-Air-Balloon"]
+	path = Aircraft/Hot-Air-Balloon
+	url = https://github.com/FGMEMBERS/Hot-Air-Ballon.git
