--- a/.gitmodules
+++ b/.gitmodules
@@ -1459,3 +1459,18 @@
 [submodule "Aircraft/Hot-Air-Balloon"]
 	path = Aircraft/Hot-Air-Balloon
 	url = https://github.com/FGMEMBERS/Hot-Air-Balloon.git
+[submodule "Aircraft/Arsenal-Delanne-10"]
+	path = Aircraft/Arsenal-Delanne-10
+	url = https://github.com/FGMEMBERS/Arsenal-Delanne-10.git
+[submodule "Aircraft/A321"]
+	path = Aircraft/A321
+	url = https://github.com/FGMEMBERS/A321.git
+[submodule "Aircrat/A300-600ST"]
+	path = Aircrat/A300-600ST
+	url = https://github.com/FGMEMBERS/A300-600ST.git
+[submodule "Aircraft/Curtiss-Wright-X-19"]
+	path = Aircraft/Curtiss-Wright-X-19
+	url = https://github.com/FGMEMBERS/Curtiss-Wright-X-19.git
+[submodule "Aircraft/Espadon"]
+	path = Aircraft/Espadon
+	url = https://github.com/FGMEMBERS/Espadon.git
