cleaning wrong path submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1465,12 +1465,12 @@
 [submodule "Aircraft/A321"]
 	path = Aircraft/A321
 	url = https://github.com/FGMEMBERS/A321.git
-[submodule "Aircrat/A300-600ST"]
-	path = Aircrat/A300-600ST
-	url = https://github.com/FGMEMBERS/A300-600ST.git
 [submodule "Aircraft/Curtiss-Wright-X-19"]
 	path = Aircraft/Curtiss-Wright-X-19
 	url = https://github.com/FGMEMBERS/Curtiss-Wright-X-19.git
 [submodule "Aircraft/Espadon"]
 	path = Aircraft/Espadon
 	url = https://github.com/FGMEMBERS/Espadon.git
+[submodule "Aircraft/A300-600ST"]
+	path = Aircraft/A300-600ST
+	url = https://github.com/FGMEMBERS/A300-600ST.git
