new submodules JWOCKY hangar added

--- a/.gitmodules
+++ b/.gitmodules
@@ -1474,3 +1474,12 @@
 [submodule "Aircraft/A300-600ST"]
 	path = Aircraft/A300-600ST
 	url = https://github.com/FGMEMBERS/A300-600ST.git
+[submodule "Aircraft/Condor-Jsb"]
+	path = Aircraft/Condor-Jsb
+	url = https://github.com/FGMEMBERS/Condor-Jsb.git
+[submodule "Aircraft/JPack"]
+	path = Aircraft/JPack
+	url = https://github.com/FGMEMBERS/JPack.git
+[submodule "Aircraft/Comet-J"]
+	path = Aircraft/Comet-J
+	url = https://github.com/FGMEMBERS/Comet-J.git
