New Aircraft Submodules Added: JWOCKY Hangar

--- a/.gitmodules
+++ b/.gitmodules
@@ -1483,3 +1483,12 @@
 [submodule "Aircraft/Comet-J"]
 	path = Aircraft/Comet-J
 	url = https://github.com/FGMEMBERS/Comet-J.git
+[submodule "Aircraft/VIP"]
+	path = Aircraft/VIP
+	url = https://github.com/FGMEMBERS/VIP.git
+[submodule "Aircraft/Lancaster-Jsb"]
+	path = Aircraft/Lancaster-Jsb
+	url = https://github.com/FGMEMBERS/Lancaster-Jsb.git
+[submodule "Aircraft/FlyingFortress-Jsb"]
+	path = Aircraft/FlyingFortress-Jsb
+	url = https://github.com/FGMEMBERS/FlyingFortress-Jsb.git
