Submodules updated: Osprey changed to V-22

--- a/.gitmodules
+++ b/.gitmodules
@@ -769,9 +769,6 @@
 [submodule "Aircraft/IL-2"]
 	path = Aircraft/IL-2
 	url = https://github.com/FGMEMBERS/IL-2.git
-[submodule "Aircraft/Osprey"]
-	path = Aircraft/Osprey
-	url = https://github.com/FGMEMBERS/Osprey.git
 [submodule "Aircraft/j22"]
 	path = Aircraft/j22
 	url = https://github.com/FGMEMBERS/j22.git
@@ -1492,3 +1489,6 @@
 [submodule "Aircraft/FlyingFortress-Jsb"]
 	path = Aircraft/FlyingFortress-Jsb
 	url = https://github.com/FGMEMBERS/FlyingFortress-Jsb.git
+[submodule "Aircraft/V-22"]
+	path = Aircraft/V-22
+	url = https://github.com/FGMEMBERS/V-22.git
