New Submodules, Aircrafts, Motorcycles and Horse,  from Lake of Constance

--- a/.gitmodules
+++ b/.gitmodules
@@ -1492,3 +1492,24 @@
 [submodule "Aircraft/CRJ700-family"]
 	path = Aircraft/CRJ700-family
 	url = https://github.com/FGMEMBERS/CRJ700-family.git
+[submodule "Aircraft/Horse"]
+	path = Aircraft/Horse
+	url = https://github.com/FGMEMBERS/Horse.git
+[submodule "Aircraft/DO-J-II"]
+	path = Aircraft/DO-J-II
+	url = https://github.com/FGMEMBERS/DO-J-II.git
+[submodule "Aircraft/Common-Spruce-CS1"]
+	path = Aircraft/Common-Spruce-CS1
+	url = https://github.com/FGMEMBERS/Common-Spruce-CS1.git
+[submodule "Aircraft/BMW-S-RR"]
+	path = Aircraft/BMW-S-RR
+	url = https://github.com/FGMEMBERS/BMW-S-RR.git
+[submodule "Aircraft/Kawa-ZX10R"]
+	path = Aircraft/Kawa-ZX10R
+	url = https://github.com/FGMEMBERS/Kawa-ZX10R.git
+[submodule "Aircraft/LCR"]
+	path = Aircraft/LCR
+	url = https://github.com/FGMEMBERS/LCR.git
+[submodule "Aircraft/Suzuki-GSX-R"]
+	path = Aircraft/Suzuki-GSX-R
+	url = https://github.com/FGMEMBERS/Suzuki-GSX-R.git
